# GameModMaster

./: AGENTS.md  CLAUDE.md  CRUSH.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_NOTES_v2.0.0.md  auto-imports.d.ts  components.d.ts  index.html  package.json  page.html  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: 开发文档.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scraper.rs
src-tauri/src/api/: admin.rs  error.rs  mod.rs  settings.rs  storage.rs  trainer.rs  updater.rs
src-tauri/src/models/: mod.rs  trainer.rs
src-tauri/src/services/: download_manager.rs  logger.rs  mod.rs  scraper.rs  settings.rs  storage.rs  trainer.rs  updater.rs
src-tauri/src/utils/: mod.rs  path.rs  zip.rs
src/assets/: global.css  main.css  naive-ui-theme-overrides.json
src/assets/styles/: design-system.css  theme.css
src/components/common/: ActionButton.vue  DownloadProgress.vue  GameCard.vue  LogViewer.vue  StateDisplay.vue  StatusCard.vue  TrainerCard.vue  TrainerSkeleton.vue
src/components/layouts/: MainLayout.vue  WindowLayout.vue
src/components/update/: CheckUpdateButton.vue  UpdateDialog.vue
src/i18n/: index.ts
src/router/: index.ts
src/services/: storageService.ts  updaterService.ts
src/stores/: trainer.ts
src/types/: index.ts  tauri.d.ts
src/utils/: errorHandler.ts
src/views/: DetailView.vue  DownloadsView.vue  Home.vue  HomeView.vue  SettingsView.vue
