[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
scraper = "0.18"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
zip = "0.6"
tauri-plugin-store = "2"
chrono = "0.4"
