[package]
name = "app"
version = "1.1.2"
description = "A Tauri App"
authors = ["you"]
license = "XingGao"
repository = "https://github.com/xinggaoya/GameModMaster.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"

reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.36", features = ["full"] }
scraper = "0.18"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
zip = "0.6"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"
futures-util = "0.3"
lazy_static = "1.4"
url = "2.5"
regex = "1.10"
# Windows API依赖
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Threading"] }
